# GTAVisionExport

./: .gitignore  README.md
DatasetExporter/: CMakeLists.txt  README.md  parameters.txt
DatasetExporter/src/: CMakeLists.txt  export.cpp  keyboard.h  main.cpp  scenario.cpp
ScenarioCreator/: .gitignore  README.md  ScenarioCreator.sln  ScenarioCreator.vcxproj  scenario.cpp  scenario.h
native/: .gitignore
native/src/: CMakeLists.txt  export.cpp  export.h  keyboard.cpp  main.cpp  scenario.cpp  scenario.h  types.h
native/src/param/: parameters.txt
param/: parameters.txt
scenarios/: log_0.txt  log_1.txt  log_10.txt  log_11.txt  log_12.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt
